--- a/templates/default.html
+++ b/templates/default.html
@@ -1,45 +1,41 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="The developer and personal blog of
-                                          Abizer Nasir, a freelance iOS and OS X
-                                          developer in London, UK">
-        <meta name="author" content="Abizer Nasir">
-        <title>Abizern.org - $title$</title>
-        <link rel="canonical" href="http://abizern.org">
-        <link rel="icon" href="/favicon.png" type="image/png">
-        <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon-60.png" type="image/png">
-        <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon-76.png" type="image/png">
-        <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon-120.png" type="image/png">
-        <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon-152.png" type="image/png">
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-        <link href="/atom.xml" rel="alternate" title="Abizern.org - A personal and developer blog" type="application/atom+xml">
-        <link type="text/plain" rel="author" href="/humans.txt">
-        <script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Personal blog of Edgar Aroutiounian">
+    <meta name="author" content="Edgar Aroutiounian">
+    <title>hyegar.com - $title$</title>
+    <link rel="canonical" href="http://hyegar.com">
+    <link rel="icon" href="/favicon.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon-60.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon-76.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon-120.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon-152.png" type="image/png">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link href="/atom.xml"
+	  rel="alternate" title="hyegar.com - A personal and developer blog" type="application/atom+xml">
+    <link type="text/plain" rel="author" href="/humans.txt">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      
+      ga('create', 'UA-57031124-1', 'auto');
+      ga('send', 'pageview');
+    </script>
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-5015208-5']);
-  _gaq.push(['_trackPageview']);
+  </head>
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+  <body>
+    $partial("templates/header.html")$
+    $partial("templates/navigation.html")$
+    
+    <section id="content">
+      $body$
+    </section>
 
-        </script>
-    </head>
-
-    <body>
-        $partial("templates/header.html")$
-        $partial("templates/navigation.html")$
-        
-        <section id="content">
-            $body$
-        </section>
-
-        $partial("templates/footer.html")$
-    </body>
+    $partial("templates/footer.html")$
+  </body>
 </html>
