--- a/templates/header.html
+++ b/templates/header.html
@@ -1,3 +1,3 @@
 <header id="page_header">
-    <h1><a href="/" title="Home">Abizer Nasir</a></h1>
+    <h1><a href="/" title="Home">Edgar Aroutiounian</a></h1>
 </header>
