--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -3,6 +3,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/archive">Archive</a></li>
-        <li><a href="/Resume">Resume</a></li>
+        <li><a href="/resume">Resume</a></li>
+	<li><a href="/hackerspace">Hackerspace</a></li>
     </ul>
 </nav>
